<resources>
    <string name="app_name">First Date Questions</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="photo_uploads">Click + button to upload up to 6 photos or videos</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="e_mail">Email</string>
    <string name="tag">Type in your login details below</string>
    <string name="rswipe">Swipe to register</string>
    <string name="lswipe">Swipe to Login</string>
    <string name="newProfile">Account Details</string>
    <string name="fullName">Please enter your fullname</string>
    <string name="dispName">Please enter a display name</string>
    <string name="occupation">Please enter your occupation</string>
    <string name="uni">University...</string>
    <string name="addy">House Address</string>
    <string name="aboutMe">You can fill in a short paragraph about you</string>
    <string name="editPhotos">Click + button to add more photos from library or click on a photo to replace it</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="facebook_app_id">751910582140524</string>
    <string name="fb_login_protocol_scheme">fb751910582140524</string>


    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
