<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        tools:context=".NewProfile"
        android:layout_centerInParent="true"
        android:id="@+id/newProfLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/newProfile"
                android:textSize="10pt"
                android:id="@+id/newProfileTitle"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/displayName"
                android:inputType="text"
                android:hint="@string/dispName"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/birthday"
                android:inputType="date"
                android:hint="Select Date of Birth"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Gender"
                android:textSize="25sp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/gender">


                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Male"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Female"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Other" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Prefer not to say"/>


            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Sexual Orientation"
                android:textSize="25sp"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/orientation">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Straight"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Gay"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Lesbien"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Bisexual"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="Other"/>

            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="The following fields are optional"
                android:textSize="15sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/work"
                android:hint="@string/occupation"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/university"
                android:inputType="text"
                android:hint="@string/uni"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/userInfo"
                android:inputType="textMultiLine"
                android:hint="@string/aboutMe"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Submit"
                android:id="@+id/submitDets"/>

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </FrameLayout>

        </LinearLayout>
    </ScrollView>