<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".EditProfile"
    android:layout_centerInParent="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/newProfile"
            android:textSize="10pt"
            android:id="@+id/newProfileTitle"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/displayName"
            android:inputType="text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/birthday"
            android:inputType="date"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Gender"
            android:textSize="25sp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/gender">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Male"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Female"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Other" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Prefer not to say"/>
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Sexual Orientation"
            android:textSize="25sp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/orientation">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Straight"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Gay"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Lesbien"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Bisexual"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Other"/>

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="The following fields are optional"
            android:textSize="15sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/work"
            android:hint="@string/occupation"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/university"
            android:inputType="text"
            android:hint="@string/uni"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/userInfo"
            android:inputType="textMultiLine"
            android:hint="@string/aboutMe"/>

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="381dp"
                    android:layout_height="33dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/editPhotos"
                    app:layout_constraintBottom_toTopOf="@+id/uploadPhoto"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/uploadPhoto"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="96dp"
                    android:layout_marginTop="40dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <ImageView
                    android:id="@+id/viewPhoto1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="68dp"
                    android:layout_marginTop="236dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/viewPhoto2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="276dp"
                    android:layout_marginTop="236dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/viewPhoto3"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="68dp"
                    android:layout_marginTop="360dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/viewPhoto4"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="276dp"
                    android:layout_marginTop="360dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/viewPhoto5"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="68dp"
                    android:layout_marginTop="492dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/viewPhoto6"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="276dp"
                    android:layout_marginTop="488dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/addPhotoButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="40dp"
                    android:layout_marginBottom="64dp"
                    android:clickable="true"
                    android:src="@android:drawable/ic_input_add"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <ImageButton
                    android:id="@+id/picFromcamera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginBottom="64dp"
                    android:src="@android:drawable/ic_menu_camera"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Update"
            android:id="@+id/submitDets"/>

    </LinearLayout>
</ScrollView>